--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://source.unsplash.com/1400x400/?agriculture,farmer" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1400x800/?agriculture,farmer" class="d-block w-100" alt="">
               </div>
               <div class="carousel-item">
-                <img src="https://source.unsplash.com/1400x400/?field,plants" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1400x800/?field,plants" class="d-block w-100" alt="">
               </div>
               <div class="carousel-item">
-                <img src="https://source.unsplash.com/1400x400/?plants,nature" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1400x800/?plants,nature" class="d-block w-100" alt="">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
